--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<head>This is a test</head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+</head>
+<body>
+    <h1>This is a test</h1>
+
+    <section id="section-gauche"></section>
+    <section></section>
+    <section>
+        <div class="flex"></div>
+        <div class="flex"></div>
+        <div class="flex"></div>
+    </section>
+</body>
+</html>
