--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>This is a test</h1>
-
+    
+    <p>I am only writing this as a test</p>
     <section id="section-gauche"></section>
     <section></section>
     <section>
