--- a/index.html
+++ b/index.html
@@ -7,15 +7,28 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This is a test</h1>
+    <h1>PERROTIN <br> ALEXIS</h1> <br>
     
-    <p>I am only writing this as a test</p>
-    <section id="section-gauche"></section>
-    <section></section>
-    <section>
-        <div class="flex"></div>
-        <div class="flex"></div>
-        <div class="flex"></div>
-    </section>
+    <h2>PROFIL</h2> 
+    <p id="lefttext">
+        Je suis à la recherche d'une <br> 
+        formation pour devenir <br> 
+        développeur d'application ou <br> 
+        développeur web</p>
+    
+    <h2>COORDONÉES</h2>
+    <p id="lefttext">
+        Téléphone : 06 41 97 99 96 <br>
+        E-mail : alexis.perrotin02@gmail.com <br>
+        Adresse : 21 Rue Yitzhak Rabin, Beaurains</p>
+
+    <h2>LOISIRS</h2>
+    <p id="lefttext">
+       <ul id="list">
+        <li>Jeux Vidéos</li>
+        <li>Mangas</li> 
+        <li>Anglais</li>
+       </ul>
+    </p>
 </body>
 </html>
