--- a/index.html
+++ b/index.html
@@ -47,7 +47,52 @@
      </div>
 
      <div>
-        
+    <h3 id="exppro">
+        EXPÉRIENCE PROFESSIONEL
+     </h3>    
+    <h4 id="expprodesc">
+        <ul>
+        <li>Stage de découverte, nettoyage d'aquariums/cages, mise en rayon</li>
+        <li>Stage de découverte, vente, mise en rayon, réception de marchandises</li>
+        <li>Stage de découverte, réinitialisation d'ordinateurs et mise en rayon</li>
+        <li>Stage d'observation</li>
+        </ul>
+    </h4>
      </div>
+
+     <div>
+    <h3 id="comp">
+        COMPÉTENCES
+     </h3>
+    <h4 id="compdesc">
+        Anglais <br>
+        Maitrise d'outils informatiques (Photoshop/Libre Office) <br>
+        Démonter/Remonter une tour d'ordinateur 
+    </h4>
+     </div>
+
+     <div>
+    <h3 id="uni">
+        2020-2021 &nbsp; Université d'Artois
+     </h3>
+    <h3 id="hs">
+        2017-2020 &nbsp; Lycée Guy Mollet
+     </h3>
+    <h3 id="ms">
+        2013-2017 &nbsp; Collège Adam de la Halle
+     </h3>
+    <h3 id="cdf">
+        Juin 2022 &nbsp; Carrefour de la fleur, Achicourt
+     </h3>
+    <h3 id="sfg">
+        Novembre 2021 &nbsp; Shop for Geek, Arras
+     </h3>
+    <h3 id="ap">
+        Février 2022 &nbsp; &nbsp; Ami Pro, Beaurains
+     </h3>
+    <h3 id="ce">
+        Mai 2017 &nbsp; &nbsp; Cituation et Ensemble, Arras
+     </h3>
+    </div>
 </body>
 </html>
